# stellar-guesser

./: .gitignore  Cargo.toml  README.md  build-and-copy.bat  build-copy-and-run.bat  build-release-and-copy.bat  build-release-copy-and-run.bat  build-release-link-to-desktop.bat  build.rs  credits.json  package-lock.json
.github/workflows/: rust.yml
app/: .gitignore  Cargo.toml  README.md  build.rs  config.json  credits.json  mobile.toml
app/addons/question-packs/: messiers_accurate.txt  messiers_reasonable.txt  messiers_rough.txt  messiers_very_accurate.txt  recognise_messiers.txt  stars_advanced.txt  stars_basic.txt  stars_intermediate.txt  stars_ioaa.txt
app/benches/: intersections.rs
app/build-scripts/: android-sign-last-build.bat  build-android-release-sign.bat  build-android-release.bat  build-release-and-copy.bat  build-release-copy-and-run.bat
app/data/: constellations.csv
app/sphere/deepsky/: caldwell-catalogue.csv  messier-catalogue.csv
app/sphere/lines/: celestial-equator.csv  celestial-meridians.csv  prime-meridian.csv
app/sphere/markers/: ecliptic_poles.csv  (+1 more)
app/src/: application.rs  config.rs  enums.rs  files.rs  graphics.rs  input.rs  lib.rs  public_constants.rs
app/themes_templates/: light_template.json  printing_template.json
benches/: intersections.rs
build-scripts/: android-sign-last-build.bat  build-and-copy.bat  build-android-debug-apk.bat  build-android-release-sign.bat  build-copy-and-run.bat  build-release-and-copy.bat  build-release-copy-and-run.bat  build-release-link-to-desktop.bat  check-android.bat  run-android.bat
constellation_vertices/: constellation_vertices.js  output.txt
crates/: Cargo.toml
crates/sg_credits/: Cargo.toml
crates/sg_game_constellations/: Cargo.toml
crates/sg_geometry/: Cargo.toml
crates/stellar_guesser/: Cargo.toml
data/: constellation_vertices.csv  constellations.csv
generators/: ecliptic.js  galactic_equator.js  join_constellations_with_vertices.js
generators/constellation_borders/: constellation-borders-2deg.csv  constellation-borders-5deg.csv  constellation_borders_1875_raw.txt  constellation_borders_2000_raw.txt  constellation_borders_generator.js  constellation_borders_generator_2.js
generators/constellation_vertices_and_borders_from_bound_in_20/: bound_in_20_to_vertices_and_borders.js  output_borders.csv  output_vertices.csv
generators/download_stars/: add_designations.py  download_hipparcos.py  process_hipparcos.py
generators/temperature_to_colour/: process.py  processed.txt
licenses/: angle.txt  spherical_geometry.txt
licenses_generic/: unknown.txt
sphere/: celestial_equator.csv  constellation_borders_generator.js  constellation_borders_generator_2.js  lines_generator.js
sphere/deepsky/: caldwell-catalogue.csv  messier-catalogue.csv
sphere/lines/: asterisms.csv  celestial-equator.csv  celestial-lines-of-latitude.csv  celestial-meridians.csv  constellation-borders-10deg.csv  constellation-borders.csv  constellation-connections.csv  ecliptic.csv  equatorial_coordinates.csv  galactic-equator.csv  prime-meridian.csv
sphere/markers/: celestial_poles.csv  contellation_vertices.csv  ecliptic_poles.csv  first_point_of_aries.csv  galactic_centre_anticentre.csv  galactic_poles.csv
sphere/stars/: index.js  stars.csv
src/: application.rs  config.rs  credits.rs  enums.rs  files.rs  geometry.rs  graphics.rs  input.rs  lib.rs  main.rs  public_constants.rs  storage.rs
src/game/: game.rs  game_handler.rs  mod.rs
src/geometry/: intersections.rs  mod.rs
src/rendering/: app_info_window.rs  caspr.rs  credits_window.rs  game_settings_window.rs  graphics_settings_window.rs  mod.rs  question_display.rs  rendering.rs  rendering_handler.rs  sky_settings_window.rs  stats_window.rs  testing_window.rs  top_panel.rs
src/server_communication/: check_for_updates.rs  mod.rs
src/structs/: constellations.rs  frames_handler.rs  graphics_settings.rs  image_info.rs  mod.rs  state.rs  testing_settings.rs  version_information.rs
src/tests/: geometry.rs
themes_templates/: dark_template.json
(+123 files in other folders)
