[package]
authors = ["Pandicon <70060103+Pandicon@users.noreply.github.com>", "matym1"]
name = "stellar-guesser"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
bench = false

[[bin]]
name = "stellar-guesser-desktop"
path = "gen/bin/desktop.rs"
bench = false

[package.metadata.cargo-android]
app-dependencies = ["com.google.android.material:material:1.8.0"]
project-dependencies = ["org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"]
app-plugins = ["org.jetbrains.kotlin.android"]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[dependencies]
angle = "0.5.0"
chrono = "0.4"
csv = "1.2.2"
directories-next = "2.0.0"
dotenvy = "0.15.7"
egui = "0.25"
egui_extras = { version = "0.25", features = ["all_loaders", "image"] }
egui-notify = "0.12.0"                                                   # It depends on egui itself, so the version of egui used by this app and by egui-notify have to match
egui-wgpu = { version = "0.25", features = ["winit"] }
egui-winit = { version = "0.25", default-features = false }
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
log = "0.4.14"
nalgebra = "0.32.2"
once_cell = "1.20.0"
pollster = "0.3"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
wgpu = "0.18"
winit = { version = "0.29", features = ["android-native-activity"] }
spherical_geometry = "0.2.0" # { path = "../spherical-geometry-fork" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.19"
ndk-context = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
rfd = "0.14.1"

[build-dependencies]
chrono = "0.4.26"
const-gen = "1.0.0"
winres = "0.1.12"

[dev-dependencies]
criterion = "0.5"

[profile.dev]
debug-assertions = false
[profile.dev.package.stellar-guesser]
debug-assertions = true
[profile.dev.package.ring]
debug-assertions = true

[[bench]]
name = "intersections"
harness = false
