[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
debug-assertions = true
[profile.dev.package.stellar-guesser]
debug-assertions = true
[profile.dev.package.stellar-guesser.dependencies.ring]
debug-assertions = true
[profile.dev.package.stellar-guesser.dependencies]
debug-assertions = false
